Don't set canvas width in stylesheet to actually fix pixel alignment
It seems that at least in WebKit, the offsetWidth is rounded to integer
values and can be larger than the actual layout width which is used for
CSS. Thus, setting "max-width: 100%" can cause the canvas to be scaled
when its actual width is the offsetWidth of the parent.

--- a/cmd/web/common/res/dsl.css
+++ b/cmd/web/common/res/dsl.css
@@ -72,10 +72,6 @@ dt::after {
 	content: ":";
 }
 
-canvas {
-	max-width: 100%;
-	height: auto;
-}
 #graphs {
 	margin: 1.5em 0;
 }
